# advent-of-code-2025

./: pyproject.toml
input/: input_1_a.py  input_1_a_dummy.py  input_2.py  input_3.py  input_4.py  input_4_small.py  input_5_rules.py  input_5_rules_small.py  input_5_updates.py  input_5_updates_small.py  input_6.py  input_6_small.py  input_one_a.py
src/: 1_a.py  1_b.py  2_a.py  2_b.py  3_a.py  3_b.py  4_a.py  4_b.py  5_a.py  5_b.py  6_a.py  one_a.py  one_b.py
