[tool.poetry]
name = "advent-of-code-2025"
version = "0.1.0"
description = ""
authors = ["Peter Lukacs <lukacs.peter.andras@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.dev-dependencies]
black = "^24.10.0"
isort = "^5.13.2"
flake8 = "^7.1.1"
pytest = "^8.3.4"
rope = "^1.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
